--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,8 @@ body {
 	margin: 0;
 	padding: 0;
 	background-color: #f4f4f4;
-
-	min-width: 650px;
-
+	
+	height: 100vh;
 }
 
 /* force box-sizing for all elements */
